/*
Copyright IBM Corp. 2016 All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

		 http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package protos;

import "fabric_proposal_response.proto";

message ChaincodeActionsPayload {

	// ChaincodeProposalPayload is present in the transaction
	// depending on the payloadVisibility field in the
	// ChaincodeTransactionHeaderExtension.
	// (it could be there in its entirety, it could be hashed or it
	// could be totally absent)
	bytes chaincodeProposalPayload = 1;

	repeated ChaincodeEndorsedAction actions = 2;

}

message ChaincodeEndorsedAction {

	ProposalResponsePayload responsePayload = 1;

	repeated Endorsement endorsements = 2;

}
